apps/gateway/dev/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: team9-envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: team9-api-gateway
  namespace: backend
  annotations:
    external-dns.alpha.kubernetes.io/hostname: api.team9.cloud.skala-ai.com
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-type: external
spec:
  gatewayClassName: team9-envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: api.team9.cloud.skala-ai.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: api.team9.cloud.skala-ai.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: team9-api-tls
      allowedRoutes:
        namespaces:
          from: Same
